# Devin-3dengine

./: CMakeLists.txt  README.md
assets/shaders/: basic.frag  basic.vert  shadow_map.frag
docs/: ARCHITECTURE.md
src/: main.cpp
src/core/: mesh.cpp  mesh.hpp  model.cpp  model.hpp  shader.cpp  shader.hpp
src/rendering/: shadow_map.cpp  shadow_map.hpp
